# simple-tui-file-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  config.ron
docs/: README(jp).md  command_list.md  contribute(jp).md  contribute.md
examples/: keymapping.rs
src/: application.rs  file_item_list.rs  infobox.rs  input.rs  input_ui.rs  keymapping.rs  load_config.rs  main.rs  path_process.rs  searcher.rs  stacker.rs  state.rs  ui.rs
src/file_item_list/: directory_item.rs  file_item.rs
src/ui/: command_ui.rs  directory_ui.rs  input_ui.rs  searcher_ui.rs  stacker_ui.rs
