[package]
name = "simple-tui-file-manager"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
tui = "0.18.0"
chrono = "0.4"
ron = "0.7"
serde = { version= "1", features = ["derive"] }
regex = "1"
