[package]
name = "simple-tui-file-manager"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "sfm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
tui = "0.19"
chrono = "0.4"
ron = "0.8"
serde = { version= "1", features = ["derive"] }
regex = "1"

[profile.opt]
inherits = "release"
lto = "fat"
opt-level = 3