[package]
name = "simple-tui-file-manager"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version= "1", features = ["derive"] }
ron = "0.12.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
chrono = "0.4.42"
